# works

./: LICENSE
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/: CITATION.cff  README.md  pyproject.toml  setup.sh
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/bbstim/: __init__.py  __main__.py  algebra.py  bbcode.py  circuit.py  cli.py  decoders.py  embeddings.py  experiments.py  geometry.py  gf2.py  plotting.py
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/configs/: experiment_registry.json  logical_aware_bb72_exhaustive.json  logical_aware_bb72_truefamily.json
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/paper/: main.tex  refs.bib
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/results/: bb72_pureL_minwt_logicals.csv  geometry_audit.csv
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/results-out/: results_cd_evaluation.csv  results_many_layout.csv  results_proxy_kernel.csv  results_untied_rates_bi.csv  results_untied_rates_la.csv  results_untied_rates_mono.csv  results_z_sector_bi.csv  results_z_sector_la.csv  results_z_sector_mono.csv
geometry-induced-correlated-noise-in-qldpc-syndrome-extraction/scripts/: bb72_pureL_minwt_logicals.py  biplanar_distance_decay_audit.py  build_semantic_csv.py  evaluate_cd.py  generate_random_layouts.py  geometry_audit.py  intermediate_bb_geometry_audit.py  logical_aware_exhaustive_audit.py  microscopic_two_block.py  microscopic_weight_audit.py  optimize_bb72_logical_aware_truefamily.py
(+45 files in other folders)
