[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbstim"
version = "0.1.0"
description = "BB-code geometry-induced correlated-noise experiments built on Stim"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "tqdm>=4.66",
    "sinter>=1.13",
    "stim>=1.13",
    "stimbposd>=0.1",
    "pymatching>=2.1",
]

[project.scripts]
bbstim = "bbstim.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.setuptools]
packages = ["bbstim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
